--- a/04-exclude-dependency-gradle/README.adoc
+++ b/04-exclude-dependency-gradle/README.adoc
@@ -1,3 +1,7 @@
 == Hint
 Example change spring boot logging
 https://www.baeldung.com/spring-boot-logging
+
+// EXAMPLE 04-GRADLE-***
+New Feature: Typed version catalogs with gradle
+https://blog.mrhaki.com/2023/03/gradle-goodness-publish-version-catalog.html
