Add mvnw to base directory

--- a/00-init-gradle/README.adoc
+++ b/00-init-gradle/README.adoc
@@ -1,5 +1,5 @@
 // EXAMPLE 00-GRADLE
-Generate an empty gradle example project with gradle
+Generate an empty gradle example project with gradle.
 ====
 $ gradle init
 ====
